--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,51 @@
     "maximize": "Maximize",
     "close": "Close"
   },
+  "menu": {
+    "file": "File",
+    "edit": "Edit",
+    "favorites": "Favorites",
+    "tools": "Tools",
+    "window": "Window",
+    "help": "Help",
+    "newProject": "New Project",
+    "newConnection": "New Connection",
+    "newConnectionMySQL": "MySQL...",
+    "newConnectionPostgreSQL": "PostgreSQL...",
+    "newConnectionOracle": "Oracle...",
+    "newConnectionSQLite": "SQLite...",
+    "newConnectionSQLServer": "SQL Server...",
+    "newConnectionMariaDB": "MariaDB...",
+    "newConnectionMongoDB": "MongoDB...",
+    "newConnectionRedis": "Redis...",
+    "new": "New",
+    "openExternal": "Open External File",
+    "openRecent": "Open Recently Used",
+    "closeConnection": "Close Connection",
+    "importConnection": "Import Connection...",
+    "exportConnection": "Export Connection...",
+    "closeWindow": "Close Window",
+    "closeTab": "Close Tab",
+    "exitCatyas": "Exit Catyas",
+    "undo": "Undo",
+    "redo": "Redo",
+    "cut": "Cut",
+    "copy": "Copy",
+    "paste": "Paste",
+    "selectAll": "Select All",
+    "addToFavorites": "Add to Favorites",
+    "manageFavorites": "Manage Favorites",
+    "structureSync": "Structure Sync",
+    "dataTransfer": "Data Transfer",
+    "backup": "Backup",
+    "scheduledTasks": "Scheduled Tasks",
+    "minimize": "Minimize",
+    "maximize": "Maximize",
+    "alwaysOnTop": "Always on Top",
+    "viewHelp": "View Help",
+    "checkUpdates": "Check for Updates",
+    "about": "About Catyas"
+  },
   "sidebar": {
     "connections": "Connections",
     "addConnection": "Add Connection",
