--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -7,6 +7,51 @@
     "maximize": "最大化",
     "close": "关闭"
   },
+  "menu": {
+    "file": "文件",
+    "edit": "编辑",
+    "favorites": "收藏夹",
+    "tools": "工具",
+    "window": "窗口",
+    "help": "帮助",
+    "newProject": "新建项目",
+    "newConnection": "新建连接",
+    "newConnectionMySQL": "MySQL...",
+    "newConnectionPostgreSQL": "PostgreSQL...",
+    "newConnectionOracle": "Oracle...",
+    "newConnectionSQLite": "SQLite...",
+    "newConnectionSQLServer": "SQL Server...",
+    "newConnectionMariaDB": "MariaDB...",
+    "newConnectionMongoDB": "MongoDB...",
+    "newConnectionRedis": "Redis...",
+    "new": "新建",
+    "openExternal": "打开外部文件",
+    "openRecent": "打开最近使用过的",
+    "closeConnection": "关闭连接",
+    "importConnection": "导入连接...",
+    "exportConnection": "导出连接...",
+    "closeWindow": "关闭窗口",
+    "closeTab": "关闭选项卡",
+    "exitCatyas": "退出 Catyas",
+    "undo": "撤销",
+    "redo": "重做",
+    "cut": "剪切",
+    "copy": "复制",
+    "paste": "粘贴",
+    "selectAll": "全选",
+    "addToFavorites": "添加到收藏夹",
+    "manageFavorites": "管理收藏夹",
+    "structureSync": "结构同步",
+    "dataTransfer": "数据传输",
+    "backup": "备份",
+    "scheduledTasks": "计划任务",
+    "minimize": "最小化",
+    "maximize": "最大化",
+    "alwaysOnTop": "置顶",
+    "viewHelp": "查看帮助",
+    "checkUpdates": "检查更新",
+    "about": "关于 Catyas"
+  },
   "sidebar": {
     "connections": "连接",
     "addConnection": "添加连接",
