--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,8 +10,9 @@
   "menu": {
     "file": "File",
     "edit": "Edit",
-    "favorites": "Favorites",
-    "tools": "Tools",
+    "view": "View(&V)",
+    "favorites": "Favorites(&A)",
+    "tools": "Tools(&T)",
     "window": "Window",
     "help": "Help",
     "newProject": "New Project",
@@ -25,6 +26,16 @@
     "newConnectionMongoDB": "MongoDB...",
     "newConnectionRedis": "Redis...",
     "new": "New",
+    "newTable": "Table (V)...",
+    "newView": "View (W)...",
+    "newFunction": "Function (X)...",
+    "newUser": "User (Y)...",
+    "newOther": "Other (Z)",
+    "newQuery": "Query...",
+    "newBackup": "Backup...",
+    "newAutoRun": "Auto Run...",
+    "newModel": "Model...",
+    "newChartWorkspace": "Chart Workspace...",
     "openExternal": "Open External File",
     "openRecent": "Open Recently Used",
     "closeConnection": "Close Connection",
@@ -41,16 +52,30 @@
     "selectAll": "Select All",
     "addToFavorites": "Add to Favorites",
     "manageFavorites": "Manage Favorites",
-    "structureSync": "Structure Sync",
-    "dataTransfer": "Data Transfer",
-    "backup": "Backup",
-    "scheduledTasks": "Scheduled Tasks",
+    "dataTransfer": "Data Transfer...",
+    "dataGeneration": "Data Generation...",
+    "dataSynchronization": "Data Synchronization...",
+    "structureSynchronization": "Structure Synchronization...",
+    "commandLineInterface": "Command Line Interface...",
+    "serverMonitor": "Server Monitor",
+    "findInDatabaseOrSchema": "Find in Database or Schema...",
+    "historyLog": "History Log...",
+    "options": "Options...",
     "minimize": "Minimize",
     "maximize": "Maximize",
     "alwaysOnTop": "Always on Top",
-    "viewHelp": "View Help",
-    "checkUpdates": "Check for Updates",
-    "about": "About Catyas"
+    "onlineDocumentation": "Online Documentation",
+    "releaseNotes": "Release Notes",
+    "about": "About Catyas",
+    "navigationPane": "Navigation Pane",
+    "informationPane": "Information Pane",
+    "list": "List",
+    "details": "Details",
+    "erDiagram": "ER Diagram",
+    "hideObjectGroup": "Hide Object Group",
+    "sort": "Sort",
+    "selectColumns": "Select Columns",
+    "showHiddenItems": "Show Hidden Items"
   },
   "sidebar": {
     "connections": "Connections",
