--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -10,8 +10,9 @@
   "menu": {
     "file": "文件",
     "edit": "编辑",
-    "favorites": "收藏夹",
-    "tools": "工具",
+    "view": "查看(&V)",
+    "favorites": "收藏夹(&A)",
+    "tools": "工具(&T)",
     "window": "窗口",
     "help": "帮助",
     "newProject": "新建项目",
@@ -25,6 +26,16 @@
     "newConnectionMongoDB": "MongoDB...",
     "newConnectionRedis": "Redis...",
     "new": "新建",
+    "newTable": "表(V)...",
+    "newView": "视图(W)...",
+    "newFunction": "函数(X)...",
+    "newUser": "用户(Y)...",
+    "newOther": "其它(Z)",
+    "newQuery": "查询...",
+    "newBackup": "备份...",
+    "newAutoRun": "自动运行...",
+    "newModel": "模型...",
+    "newChartWorkspace": "图表工作区...",
     "openExternal": "打开外部文件",
     "openRecent": "打开最近使用过的",
     "closeConnection": "关闭连接",
@@ -41,16 +52,30 @@
     "selectAll": "全选",
     "addToFavorites": "添加到收藏夹",
     "manageFavorites": "管理收藏夹",
-    "structureSync": "结构同步",
-    "dataTransfer": "数据传输",
-    "backup": "备份",
-    "scheduledTasks": "计划任务",
+    "dataTransfer": "数据传输...",
+    "dataGeneration": "数据生成...",
+    "dataSynchronization": "数据同步...",
+    "structureSynchronization": "结构同步...",
+    "commandLineInterface": "命令行界面...",
+    "serverMonitor": "服务器监控",
+    "findInDatabaseOrSchema": "在数据库或模式中查找...",
+    "historyLog": "历史日志...",
+    "options": "选项...",
     "minimize": "最小化",
     "maximize": "最大化",
     "alwaysOnTop": "置顶",
-    "viewHelp": "查看帮助",
-    "checkUpdates": "检查更新",
-    "about": "关于 Catyas"
+    "onlineDocumentation": "在线文档",
+    "releaseNotes": "发行注记",
+    "about": "关于 Catyas",
+    "navigationPane": "导航窗格",
+    "informationPane": "信息窗格",
+    "list": "列表",
+    "details": "详细信息",
+    "erDiagram": "ER 图表",
+    "hideObjectGroup": "隐藏对象组",
+    "sort": "排序",
+    "selectColumns": "选择列",
+    "showHiddenItems": "显示隐藏的项目"
   },
   "sidebar": {
     "connections": "连接",
